tests/aether/negative/expect_AE0002_missing_comma.aether
// Missing comma between args.
fn step() {
    foo(1 2);
}
